--- a/study.html
+++ b/study.html
@@ -29,7 +29,7 @@
                     <img src="/images/logo.svg" alt="Proffy"> 
                 </div>
 
-                <div class="header-contant">
+                <div class="header-content">
                     <strong>Esses são os proffys disponíveis</strong>   
                     <form id="search-teachers">
                         <div class="select-block">
