--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
+        <link href="/styles/fonts.css" rel="stylesheet">
+
     </head>
 
     <body id="page-landing">
