--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!-- isso é uma tag <html> -->
-<!-- na tag <head> irá configurações do meu documento -->
-<!-- na tag body: Todo conteúdo visível da página -->
-
-
 <!DOCTYPE html>
-<html lang="pt-br"> <!-- lang é um atributo-->
+<html lang="pt-br">
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <meta name="theme-color" content="#8257E5">
+
         <title>Proffy | Sua plataforma de estudos online</title>
+
+        <link rel="shortcut icon" href="images/favicon.png" type="image/png">
         
         <link rel="stylesheet" href="/styles/main.css">
 
         <link rel="stylesheet" href="/styles/partials/page-landing.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
-
-        <link href="/styles/fonts.css" rel="stylesheet">
 
     </head>
 
