--- a/study.html
+++ b/study.html
@@ -7,6 +7,7 @@
         <title>Proffy | Sua plataforma de estudos online</title>
         
         <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/partials/header.css">
 
         <link rel="stylesheet" href="/styles/partials/page-study.css">
 
