--- a/study.html
+++ b/study.html
@@ -8,12 +8,10 @@
         
         <link rel="stylesheet" href="/styles/main.css">
         <link rel="stylesheet" href="/styles/partials/header.css">
-
+        <link rel="stylesheet" href="/styles/partials/forms.css">
         <link rel="stylesheet" href="/styles/partials/page-study.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
-
-        <link href="/styles/fonts.css" rel="stylesheet">
 
     </head>
 
