--- a/give-classes.html
+++ b/give-classes.html
@@ -86,11 +86,12 @@
                         </div>
                     </fieldset>
 
-                    <fieldset>
+                    <fieldset   id="schedule-items">
                         <legend>Horários disponíveis
                             <button id="add-time">+ Novo Horário</button>
                         </legend>
 
+                        <!-- Dias da semana-->
                         <div class="schedule-item">
                             <div class="select-block">
                                 <label for="weekday">Dia da semana</label>
@@ -114,9 +115,37 @@
                                 <input type="time" name="time_to[]">
                             </div>
                         </div>
+                        <!-- Dias da semana-->
+                        <div class="schedule-item">
+                            <div class="select-block">
+                                <label for="weekday">Dia da semana</label>
+                                <select name="weekday[]" required>
+                                    <option value="">Domingo</option>
+                                    <option value="">Segunda-feira</option>
+                                    <option value="">Terça-feira</option>
+                                    <option value="">Quarta-feira</option>
+                                    <option value="">Quinta-feira</option>
+                                    <option value="">Sexta-feira</option>
+                                    <option value="">Sábado</option>
+                                </select>
+                            </div>
+                            <!-- Das e Até-->
+                            <div class="input-block">
+                                <label for="time_from">Das</label>
+                                <input type="time" name="time_from[]">
+                            </div>
+                            <div class="input-block">
+                                <label for="time_to">Até</label>
+                                <input type="time" name="time_to[]">
+                            </div>
+
+                        </div>
+
                     </fieldset>
+
                 </form>
 
+                <!-- Imagem e botão-->
                 <footer>
                     <p>
                         <img src="/images/icons/warning.svg" alt="Aviso importante">
